--- a/package.json
+++ b/package.json
@@ -1,38 +1,23 @@
 {
-  "$schema": "https://www.raycast.com/schemas/extension.json",
-  "name": "screentime",
-  "title": "ScreenTime",
-  "description": "Manage macOS screen time",
-  "icon": "command-icon.png",
-  "author": "reflash",
-  "categories": [
-    "Productivity"
-  ],
-  "license": "MIT",
-  "commands": [
-    {
-      "name": "index",
-      "title": "Show List and Detail",
-      "description": "Template for showing a static list and a detail view",
-      "mode": "view"
-    }
-  ],
+  "name": "screentime-expo",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
   "dependencies": {
-    "@raycast/api": "^1.56.3"
+    "expo": "~49.0.13",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-native": "0.72.5"
   },
   "devDependencies": {
-    "@raycast/eslint-config": "1.0.5",
-    "@types/node": "18.8.3",
-    "@types/react": "18.0.9",
-    "eslint": "^7.32.0",
-    "prettier": "^2.5.1",
-    "typescript": "^4.4.3"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.14",
+    "typescript": "^5.1.3"
   },
-  "scripts": {
-    "build": "ray build -e dist",
-    "dev": "ray develop",
-    "fix-lint": "ray lint --fix",
-    "lint": "ray lint",
-    "publish": "npx @raycast/api@latest publish"
-  }
+  "private": true
 }
