--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "@types/react": "~18.2.14",
     "typescript": "^5.1.3"
   },
+  "expo": {
+    "autolinking": {
+      "nativeModulesDir": "./modules"
+    }
+  },
   "private": true
 }
