changed module resolution method

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true,
-    "paths": {
-      "expo-settings": ["./modules/expo-settings/src/index"],
-      "expo-settings/*": ["./modules/expo-settings/src/*"]
-    }
+    "strict": true
   },
 }
