--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "expo": "~49.0.13",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.5",
-    "expo-splash-screen": "~0.20.5"
+    "react-native": "0.72.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
